# sinsei_UMIUSI_core

./: .clang-tidy  .editorconfig  .env  .gitignore  CMakeLists.txt  README.md  deps.repos  docker-compose.yml  package.xml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/work/: Dockerfile
.github/workflows/: main.yml
.github/workflows/scripts/: parse-env-file.sh
behavior_tree/: tree_main.btproj  tree_main.xml
behaviortree/: main.xml
include/sinsei_umiusi_core/: behaviortree.hpp
include/sinsei_umiusi_core/behaviortree/: ros_stateful_action_node.hpp  ros_sync_action_node.hpp  sample.hpp
include/sinsei_umiusi_core/robot_state/: auto.hpp  core.hpp  debug.hpp  is_power_on.hpp  manual.hpp  mode_control.hpp  mode_match.hpp  power_control.hpp  power_off.hpp  robot_state.hpp  running.hpp  standby.hpp
include/sinsei_umiusi_core/robot_strategy/: auto.hpp  core.hpp  debug.hpp  find_client.hpp  is_power_on.hpp  manual.hpp  mode_control.hpp  mode_match.hpp  power_control.hpp  power_off.hpp  power_on.hpp  should_power_on.hpp  standby.hpp
launch/: main.yaml
msg/: EscHealth.msg  HighPowerHealthCheckInfo.msg  LowPowerHealthCheckInfo.msg  Target.msg  ValueWithHealth.msg
scripts/: joystick.py
src/sinsei_umiusi_core/: behaviortree.cpp
src/sinsei_umiusi_core/auto_target_generator/: auto_target_generator.py
src/sinsei_umiusi_core/behaviortree/: main.cpp  ros_stateful_action_node.cpp  ros_sync_action_node.cpp
src/sinsei_umiusi_core/low_power_health_check/: low_power_health_check  low_power_health_check.py
src/sinsei_umiusi_core/manual_target_generator/: manual_target_generator.py
src/sinsei_umiusi_core/robot_state/: auto.cpp  core.cpp  debug.cpp  is_power_on.cpp  main.cpp  manual.cpp  mode_control.cpp  mode_match.cpp  power_off.cpp  robot_state.cpp  running.cpp  standby.cpp
src/sinsei_umiusi_core/robot_strategy/: auto.cpp  core.cpp  debug.cpp  find_client.cpp  is_power_on.cpp  main.cpp  manual.cpp  mode_control.cpp  mode_match.cpp  power_off.cpp  power_on.cpp  robot_strategy.py  should_power_on.cpp  standby.cpp
