<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sinsei_umiusi_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="64204135+yk4to@users.noreply.github.com">Yuta Kato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>ament_cmake_auto</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <exec_depend>python3-pygame</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>